Remove proofOfPlay from db.